Take care of Finishing notes

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -298,6 +298,10 @@
 
             .searchbar-container {
                 margin-inline: rem(5px);
+
+                .search-bar {
+                    font-size: rem(14px);
+                }
             }
 
             .links-container {
