--- a/src/assets/styles/cmps/CtaModal.scss
+++ b/src/assets/styles/cmps/CtaModal.scss
@@ -181,6 +181,13 @@
         }
 
     }
+
+    @include for-mobile-layout {
+        .modal-content {
+            width: 100%;
+        }
+    }
+
 }
 
 .modal-backdrop {
