--- a/src/assets/styles/cmps/LoginSignup.scss
+++ b/src/assets/styles/cmps/LoginSignup.scss
@@ -7,6 +7,7 @@
     }
 
     .benefits-container {
+        pointer-events: none;
         position: absolute;
         padding: 3.75em 2.5em 2em;
         color: $light-clr;
